--- a/public/css/file-manager.css
+++ b/public/css/file-manager.css
@@ -115,7 +115,9 @@ a {
 
 .file-manager .main .folder-list {
   width: 100%;
-  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 .file-manager .main .folder-list .folder-item {
