--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -82,7 +82,8 @@
                 .folder-name {
                     text-align: center;
                     width: 100%;
-                    color: $primary-color;
+                    color: #ffff00;
+                    background-color: #1a202c;
                     padding: 5px 0;
                     position: absolute;
                     bottom: 0;
