--- a/public/css/file-manager.css
+++ b/public/css/file-manager.css
@@ -143,7 +143,8 @@ a {
 .file-manager .main .folder-list .folder-item .folder-name {
   text-align: center;
   width: 100%;
-  color: green;
+  color: #ffff00;
+  background-color: #1a202c;
   padding: 5px 0;
   position: absolute;
   bottom: 0;
